# governance-reasoning-engine

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
base/: bidirectional_negation_check.metta  debug.metta  modality.metta  triple.metta  type.metta
example/: 1_stakeholder_lying_detect.metta  2_smart_port_example.metta  3_state_of_affairs_infer.metta  4_mututually_exclusive_detect.metta
example/5_contradiction/: 5_1_basic_contradiction_infer.metta  5_2_domain_knowledge_contradiction_infer.metta
example/6_compliance/: 6_1_basic_compliance_infer.metta  6_2_another_compliance_via_DTS_infer.metta
example/7_conflict/: 7_1_basic_conflict_via_DTS_infer.metta  7_2_another_conflict_via_DTS_infer.metta
knowledge/: eventuality.metta  role.metta
metta_inference_lib/: CMakeLists.txt  build.sh  build_v2.sh
metta_inference_lib/api/: metta_api.cpp  metta_api.hpp
metta_inference_lib/cli/: download_cli11.sh  metta_cli.cpp  metta_knowledge_cli.cpp
metta_inference_lib/config/: inference_config.json
metta_inference_lib/examples/: CMakeLists.txt  example_api.cpp  example_basic.cpp  test_example.metta  test_knowledge_io.cpp  test_soa_validation.cpp  test_v2_improvements.cpp
metta_inference_lib/include/metta_inference/: config.hpp  entity_resolver.hpp  formatters.hpp  inference_engine.hpp  knowledge_io.hpp  module_loader.hpp  process_executor.hpp  semantic_analyzer.hpp  sexpr_parser.hpp
metta_inference_lib/lib/: entity_resolver.cpp  formatters.cpp  inference_engine_base.cpp  inference_engine_v2.cpp  knowledge_io.cpp  module_loader.cpp  process_executor.cpp  semantic_analyzer.cpp  sexpr_parser.cpp
metta_inference_lib/tests/: CMakeLists.txt  simple_test.cpp  test_compliance  test_compliance.cpp  test_compliance.metta  test_compliance_output.txt  test_improved  test_improved_knowledge.cpp  test_knowledge_io.metta  test_knowledge_parser  test_knowledge_parser.cpp  test_mock_compliance.cpp  test_module_loader.cpp
reason/: DTS.metta  eventuality_level.metta  judgement_level.metta  statement_level.metta
